# Collapsarr

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-entrypoint.sh  hatch_build.py  pyproject.toml
.github/workflows/: beta.yml  release.yml
collapsarr/: __init__.py  __main__.py  auth.py  config.py  database.py  frontend.py  health.py  main.py
collapsarr/arr/: __init__.py  client.py  files.py  models.py  routes.py  service.py  webhooks.py
collapsarr/auth/: __init__.py  enforcement.py  routes.py  session.py
collapsarr/downmix/: __init__.py  apply.py  pipeline.py  probe.py  remux.py  targets.py
collapsarr/jobs/: __init__.py  failure_notify.py  history.py  models.py  queue.py  routes.py  scheduler.py
collapsarr/media/: __init__.py  models.py  routes.py  service.py
collapsarr/migrations/: README.md  __init__.py  env.py
collapsarr/migrations/versions/: 2026_07_24_afde30c41b7b_baseline_schema.py
collapsarr/notify/: __init__.py  dispatch.py  models.py  routes.py  service.py
collapsarr/settings/: __init__.py  env_seed.py  models.py  passwords.py  routes.py  service.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/api/: activity.ts  auth.ts  client.ts  health.ts  instances.ts  notifiers.ts  settings.ts  wanted.ts
frontend/src/components/: AppShell.tsx  HealthBanner.tsx  OnboardingPanel.tsx  PlaceholderView.tsx  Sidebar.tsx  icons.tsx
frontend/src/components/settings/: ConnectSection.tsx  GeneralSection.tsx  InstancesSection.tsx  PathMappingsPanel.tsx  TargetsSection.tsx
frontend/src/pages/: ActivityPage.tsx  FileDetailPage.tsx  LoginPage.tsx  SettingsPage.tsx  SetupPage.tsx  WantedPage.tsx
frontend/src/routes/: nav.tsx  router.tsx
frontend/src/styles/: global.css  theme.css
frontend/src/test/: activityPage.test.tsx  apiClient.test.ts  appShell.test.tsx  fileDetailPage.test.tsx  healthBanner.test.tsx  loginPage.test.tsx  onboardingPanel.test.tsx  settingsConnect.test.tsx  settingsGeneral.test.tsx  settingsInstances.test.tsx  settingsPage.test.tsx  settingsTargets.test.tsx  setup.ts  setupPage.test.tsx  sidebarLogout.test.tsx  wantedPage.test.tsx
frontend/src/types/: activity.ts  health.ts  instances.ts  notifiers.ts  settings.ts  wanted.ts
tests/: conftest.py  test_arr_client.py  test_arr_files.py  test_arr_models.py  test_arr_routes.py  test_arr_service.py  test_arr_webhooks.py  test_auth.py  test_config.py  test_database.py  test_downmix_apply.py  test_downmix_pipeline.py  test_downmix_probe.py  test_downmix_remux.py  test_downmix_targets.py  test_env_seed.py  test_frontend.py  test_health.py  test_health_check.py  test_jobs_failure_notify.py  test_jobs_history.py  test_jobs_queue.py  test_jobs_routes.py  test_jobs_scheduler.py  test_main.py  test_media_service.py  test_migrations.py  test_notify_dispatch.py  test_notify_routes.py  test_notify_service.py  test_passwords.py  test_settings_routes.py  test_settings_service.py  test_wanted_routes.py
tests/fixtures/arr/: radarr_movie_list.json  radarr_status_ok.json  radarr_webhook_on_import.json  radarr_webhook_on_upgrade.json  sonarr_episodefiles_series1.json  sonarr_series_list.json  sonarr_status_ok.json  sonarr_webhook_on_import.json  sonarr_webhook_on_upgrade.json  sonarr_webhook_test.json
tests/fixtures/downmix/: multi_lang.mkv  stereo_eng.mkv  surround_51.mkv  surround_71.mkv  untagged_language.mkv  video_audio_subs.mkv
