[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "collapsarr"
version = "0.1.0"
description = "An *arr-family companion app that adds downmixed (stereo/2.1/5.1) audio tracks to media missing them, via FFmpeg."
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Jovin Jovinsson" }]
keywords = ["arr", "sonarr", "radarr", "ffmpeg", "audio", "downmix"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
collapsarr = "collapsarr.__main__:main"

[project.urls]
Homepage = "https://github.com/JovinJovinsson/Collapsarr"
Repository = "https://github.com/JovinJovinsson/Collapsarr"

# The built Vite/React frontend (frontend/dist) is bundled into the wheel as
# package data under collapsarr/static and served by FastAPI at runtime
# (COL-40, Bazarr's approach). `python -m build` does NOT run `npm run build`;
# the frontend must be built first (Dockerfile stage 1 / the release pipeline
# in COL-41 do this before invoking the wheel build).
#
# `artifacts` overrides the .gitignore exclusion of frontend/dist so the
# sdist picks it up naturally (its file selection isn't restricted to
# `packages`, unlike the wheel). The wheel instead bundles it via the
# hatch_build.py hook, scoped to the wheel target only: hatchling reserves
# any path passed to `force_include`, which — if this hook applied
# globally — would silently prune frontend/dist out of the sdist's natural
# inclusion without actually force-including it there either. Scoping to
# wheel also means `pip install -e` (which never touches the wheel's
# "standard" version) doesn't require frontend/dist to exist.
[tool.hatch.build]
artifacts = ["frontend/dist/**"]

[tool.hatch.build.targets.wheel]
packages = ["collapsarr"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["collapsarr", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.isort]
known-first-party = ["collapsarr"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection pattern requires calling Depends(...) (and
# similarly Query/Path/Body) in argument defaults; B008 would otherwise flag
# every route that uses it.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
files = ["collapsarr", "tests"]
strict = true
plugins = ["pydantic.mypy"]
